vlib/v/parser/tests/invalid_using_shared.vv
fn main() {
	if shared true {
		println(true)
	}
}
